took a step back

--- a/templates/input1.html
+++ b/templates/input1.html
@@ -9,7 +9,7 @@
 Type the symbol (1-4 characters) for the stock you want to see.
 </h4>
 
-<form id='userinfoform_lulu' method='post' action='index_lulu' > <!-- action is the URL you want to move to next-->
+<form id='userinfoform_lulu' method='post' action='time_series' > <!-- action is the URL you want to move to next-->
    <p>
    Stock Symbol: <input type='text' name='StockSymb' />
    </p>
